[project]
name = "crawl-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymongo>=4.13.2",
    "python-dotenv>=1.1.0",
    "selenium>=4.33.0",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
]
